--- a/personal-portfolio/src/components/Home/index.scss
+++ b/personal-portfolio/src/components/Home/index.scss
@@ -1,85 +1,173 @@
 .home-page {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-left: 64px;
+    padding: 1vw;
+    text-align: left;
+    //max-height: vh; /* Maximum height for the text zone */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
 
-    .text-zone {
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 45%;
-        max-height: 90%;
-    }
+.text-zone {
+    flex: 1;
+    padding: 1vw;
+    margin-left: 80px;
+    max-width: 80%; /* Ensures the text zone does not exceed half the screen width */
+}
 
-    h1 {
-        color: #fff;
-        font-size: 53px;
-        margin: 0;
-        font-family: 'Coolvetica';
-        font-weight: 400;
+h1 {
+    color: #fff;
+    font-size: 3vw; /* Relative unit to make font-size responsive */
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    position: relative;
+    margin-top: 4vw;
+    max-width: 100%; /* Ensure h2 does not exceed the container width */
+}
 
-        &::before{
-                content: '<h1>';
-                font-family: 'La Belle Aurore';
-                color: #ffffff;
-                font-size: 18px;
-                position: absolute;
-                margin-top: -40px;
-                left: 15px;
-                opacity: 0.6;
-        }
+h1::before {
+    content: '<h1>';
+    font-family: 'La Belle Aurore';
+    color: #ffffff;
+    font-size: 2vw; /* Relative unit */
+    position: absolute;
+    top: -1.5vw;
+    left: 0.5vw;
+    opacity: 0.6;
+}
 
-        &::after {
-            content: '</h1>';
-            font-family: 'La Belle Aurore';
-            color: #ffffff;
-            font-size: 18px;
-            position: absolute;
-            margin-top: 18px;
-            margin-left: 20px;
-            animation: fadeIn 1s 1.7s backwards;
-            opacity: 0.6;
-        }
+h1::after {
+    content: '</h1>';
+    font-family: 'La Belle Aurore';
+    color: #ffffff;
+    font-size: 2vw; /* Relative unit */
+    position: absolute;
+    bottom: -2vw;
+    left: 0.5vw;
+    opacity: 0.6;
+}
 
-    }
+h2 {
+    color: #f3aca6;
+    font-weight: 800;
+    margin: 64px;
+    font-size: 2vw; /* Relative unit */
+    font-family: Georgia;
+    letter-spacing: 0.05vw;
+    margin-top: 0vw;
+    margin-bottom: 4vw;
+    max-width: 100%; /* Ensure h2 does not exceed the container width */
+    word-wrap: break-word; /* Wrap the text if it exceeds the container width */
+}
 
-    h2 {
-        color: #f3aca6;
-        margin-top: 20px;
-        font-weight: 800;
-        font-size: 20px;
-        font-family: Georgia;
-        letter-spacing: 1px;
-        animation: fadeIn 1s 1.8s backwards;
-    }
+.flat-button {
+    color: #f3aca6;
+    font-size: 1vw;
+    font-weight: 750;
+    letter-spacing: 0.07vw;
+    font-family: sans-serif;
+    text-decoration: none;
+    margin: 64px;
+    border: 0.25vw solid #f3aca6;
+    margin-top: 0vw;
+    padding-left: 0.75vw;
+    padding-right: 0.75vw;
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
+    margin-bottom: 2vw;
+    display: inline-block;
+    background-color: transparent; /* Ensure the background is transparent */
+    white-space: nowrap;
+    border-radius: 40px;
+}
 
-    .flat-button {
-        color: #f3aca6;
-        font-size: 14px;
-        font-weight: 750;
-        letter-spacing: 4x;
-        font-family: sans-serif;
-        text-decoration: none;
-        padding: 10px 18px;
-        border: 2px solid #f3aca6;
-        margin-top: 25px;
-        float: left;
-        animation: fadeIn 1s 1.8s backwards;
-        white-space: nowrap;
-
-        &:hover{
-            background: #f3aca6;
-            color: #fff;
-        }
-    }
+.flat-button:hover {
+    background: #f3aca6;
+    color: #fff;
 }
 
 .headshot {
-    img{
-        justify-content: center;
-        margin-top: 10%;
-        margin-left: calc(50% + 270px);
-        width: 25%;
-        height: 25%;
-        margin-right: 0px;
-        animation: fadeIn 2s 3s backwards;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5vw; /* Adjust the offset from the left */
+    width: 40%; /* Adjust the width of the container */
+    margin-top: 20vw; /* Add space above the picture */
+    margin-bottom: 30vw; /* Add space below the picture */
+}
+
+.headshot img {
+    width: 75%;
+    height:auto;
+    max-width: 100vw;
+    max-height: 45vw;
+    display: block;
+}
+
+.word {
+    display: inline-block;
+}
+
+/* Media Queries for responsiveness */
+@media (max-width: 768px) {
+    .home-page {
+        flex-direction: column;
+        text-align: center;
     }
+
+    .headshot {
+        .img{
+            width: 100%;
+            max-height: 80vw;
+            object-fit: contain;
+        }
+        width: 55%; /* Adjust the width of the container */
+        height: 100%;
+        order: 1;
+        margin-top: 10vw;
+        margin-left: 0;
+        margin-bottom: 1vw; /* Add some space below the image */
+    }
+
+    .text-zone {
+        order: 2;
+        padding: 1vw;
+        max-width: 100%; /* Allow text zone to take full width on smaller screens */
+    }
+
+    h1 {
+        font-size: 8vw; /* Adjust font-size for smaller screens */
+    }
+
+    h1::before, h1::after {
+        font-size: 4vw; /* Adjust pseudo-element font-size for smaller screens */
+    }
+
+    h2 {
+        font-size: 5vw; /* Adjust font-size for smaller screens */
+    }
+
+    .flat-button {
+        font-size: 3vw;
+        font-weight: 750;
+        letter-spacing: 0.07vw;
+        font-family: sans-serif;
+        text-decoration: none;
+        margin: 64px;
+        border: 0.8vw solid #f3aca6;
+        margin-top: 0vw;
+        padding-left: 1.25vw;
+        padding-right: 1.25vw;
+        padding-top: 0.5vw;
+        padding-bottom: 0.5vw;
+        margin-bottom: 5vw;
+        display: inline-block;
+        background-color: transparent; /* Ensure the background is transparent */
+        white-space: nowrap;
+    }
+
 }
