--- a/personal-portfolio/src/components/Layout/index.scss
+++ b/personal-portfolio/src/components/Layout/index.scss
@@ -31,7 +31,8 @@
     min-height: 566px;
     position: absolute;
     opacity: 0;
-    top: 5%;
+    top: 5vh;
+    bottom: 5vh;
     margin: 0 auto;
     z-index: 1;
     transform-style: preserve-3d;
@@ -40,56 +41,69 @@
 }
 
 .about-page{
+    top: 80px;
+    //max-height: 100%;
+    margin-top: 4vh;
+    margin-bottom: 10vh;
+    vertical-align: middle;
+    display: flex;
+    flex-direction: row;
+    overflow-y: auto; /* Enable vertical scrolling */
     .text-zone{
-        position: absolute;
-        left: 12%;
-        top: 50%;
-        transform:translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
+        //overflow-y: auto; /* Enable vertical scrolling */
+        position: relative;
+        //left: 12%;
+        margin-left: 64px;
+        //top: 50%;
+        max-width: 50%;
         max-height: 90%;
+        margin-bottom: 4vh;
 
         h1 {
-            font-size: 53px;
+            font-size: 4.5vw;
             font-family: 'Coolvetica';
             color: #f5a6b3;
             font-weight: 400;
+            margin-left: 64px;
             margin-top: 0;
             position: relative;
-            margin-bottom: 40px;
+            margin-bottom: 3.75vw;
 
-            left: 10px;
+            //left: 10px;
             &::before{
+                color: #ffffff;
                 content: '<h1>';
                 font-family: 'La Belle Aurore';
-                font-size: 18px;
+                font-size: 2vw;
                 position: absolute;
-                margin-top: -10px;
-                left: -10px;
+                //margin-top: -10px;
+                //left: -10px;
+                top: -1.25vw;
                 opacity: 0.6;
-                line-height: 18px;
+                //line-height: 18px;
             }
 
             &::after {
+                color: #ffffff;
                 content: '<h1/>';
                 font-family: 'La Belle Aurore';
-                font-size: 18px;
-                line-height: 18px;
+                font-size: 2vw;
+                //line-height: 18px;
                 position: absolute;
-                left: -30px;
-                bottom: -20px;
-                margin-left: 20px;
+                //left: -30px;
+                bottom: -2vw;
+                //margin-left: 20px;
                 opacity: 0.6;
             }
         }
 
         p {
-            font-size: 16px;
+            margin-left: 2vw;
+            font-size: 1vw;
             color: #fff;
             font-family: Georgia;
             font-weight: 500;
-            min-width: fit-content;
+            //min-width: fit-content;
             animation: pulse 1s;
 
             &:nth-of-type(1) {
@@ -104,14 +118,35 @@
                 animation-delay: 1.3s;
             }
         }
+        .photos{
+            .pics{
+                margin-bottom: 5vh;
+                //margin-left: 40px;
+                width: 15vw;
+                max-height: 250px;
+                max-width: 250px;
+                height: auto;
+                animation: pulse 1s;
+                animation-delay: 1.4s;
+            }
+            margin-top: 5vh;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
     }
+
+    
 
     .text-animate-hover{
         &:hover {
             color: #fff;
         }
     }
+
 } 
+
+
 
 .bgButterflies{
     opacity: 10%;
