--- a/personal-portfolio/src/components/About/index.scss
+++ b/personal-portfolio/src/components/About/index.scss
@@ -1,12 +1,12 @@
 .stage-cube-cont {
     width: 50%;
     height: 100%;
-    top: 0;
-    padding-top: 18%;
-    margin-left: 0;
-    position: absolute;
-    right: 0;
+    margin-top: -10vh;
+    display: flex; /* Use Flexbox */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
     overflow: hidden;
+    position: relative; /* Make sure it's positioned correctly */
 }
 
 .cubespinner {
@@ -15,17 +15,18 @@
     animation-iteration-count: infinite;
     animation-duration: 12s;
     transform-style: preserve-3d;
-    transform-origin: 100px 100px 0;
-    margin-left: calc(50% - 100px);
+    transform-origin: center; /* Center the rotation point */
+    width: 200px; /* Set a fixed width */
+    height: 200px; /* Set a fixed height */
 
     div {
         position: absolute;
         width: 200px;
         height: 200px;
         border: 1px solid #F2C5C7;
-        background: rgba (255, 255, 255, 0.4);
+        background: rgba(255, 255, 255, 0.15);
         text-align: center;
-        font-size: 100px;    
+        font-size: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -37,23 +38,18 @@
     }
     .face2 {
         transform: rotateY(90deg) translateZ(100px);
-        
     }
     .face3 {
         transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
-        
     }
     .face4 {
         transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
-        
     }
     .face5 {
         transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
-        
     }
     .face6 {
         transform: rotateX(-90deg) translateZ(100px);
-        
     }
 }
 
@@ -79,11 +75,73 @@
     }
 }
 
-.pics{
-    margin-top: 10px;
-    margin-left: 40px;
-    width: 200px;
-    height: 200px;
-    animation: pulse 1s;
-    animation-delay: 1.4s;
+
+
+
+@media (max-width: 768px) {
+    
+    .about-page {
+        //max-height: 100%;
+        height: 100vh; /* Full viewport height */
+        padding-bottom: 20vh; /* Add padding at the bottom */
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        //text-align: center;
+        justify-content: flex-start;
+        align-items: center; /* Center elements horizontally */
+        height: 100vh; /* Make sure the height is full viewport height */
+
+        //margin-bottom: 30vh;
+        .text-zone {
+            p{
+                font-size: large;
+            }
+            .photos{
+                .pics{
+                    width: 60vw;
+                }
+                flex-direction: column;
+            }
+            overflow: hidden;
+            order: 1;
+            min-width: 50%;
+            box-sizing: border-box;
+            padding-top: 5%;
+            padding-bottom: 200%;
+            max-width: 90%; /* Allow text zone to take full width on smaller screens */
+        }
+        h1 {
+            text-align: left;
+        }
+
+        h1::before, h1::after {
+            font-size: 2vw; /* Adjust pseudo-element font-size for smaller screens */
+        }
+
+        p{
+            padding-left: 5vh;
+            padding-right: 5vh;
+        }
+
+    }
+
+    .stage-cube-cont {
+        order: 2;
+        padding-bottom: 50%;
+        margin-left: 64px;
+        display: flex; /* Use Flexbox */
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Align towards the top */
+        width: 100%; /* Ensure it takes full width */
+        margin-top: 80px; /* Adjust as necessary to position from the top */
+        margin-bottom: 150px; /* Adjust as necessary to position from the top */
+        overflow: visible;
+    }
+
+    .cubespinner {
+        width: 150px;
+        height: 150px;
+        transform-origin: center;
+    }
 }
