--- a/personal-portfolio/src/components/Contact/index.scss
+++ b/personal-portfolio/src/components/Contact/index.scss
@@ -1,117 +1,332 @@
-.contact-page{
-    .text-zone{
-        position: absolute;
-        left: 18%;
-        top: 50%;
-        transform:translateY(-50%);
-        width: 70%;
-        vertical-align: middle;
-        max-height: 90%;
+// .contact-page{
+//     .text-zone{
+//         position: relative;
+//         //left: 18%;
+//         margin-left: 64px;
+//         margin-top: 40px;
+//         top: 10vh;
+//         //top: 50%;
+//         //transform:translateY(-50%);
+//         width: 70%;
+//         vertical-align: middle;
+//         place-items: center;
+        
+//         max-height: 90%;
+//         overflow-y: auto;
+//         overflow-x: hidden;
 
-        h1 {
-            font-size: 53px;
-            font-family: 'Coolvetica';
-            color: #f5a6b3;
-            font-weight: 400;
-            margin-top: 0;
-            position: relative;
-            margin-bottom: 40px;
+//         h1 {
+//             font-size: 4.5vw;
+//             font-family: 'Coolvetica';
+//             color: #f5a6b3;
+//             font-weight: 400;
+//             margin-top: 0;
+//             position: relative;
+//             margin-bottom: 3.75vw;
 
-            left: 10px;
-            &::before{
-                content: '<h1>';
-                font-family: 'La Belle Aurore';
-                font-size: 18px;
-                position: absolute;
-                margin-top: -10px;
-                left: -10px;
-                opacity: 0.6;
-                line-height: 18px;
-            }
+//             //left: 10px;
+//             &::before{
+//                 color: #fff;
+//                 content: '<h1>';
+//                 font-family: 'La Belle Aurore';
+//                 font-size: 2vw;
+//                 position: absolute;
+//                 //margin-top: -10px;
+//                 //left: -1.25vw;
+//                 opacity: 0.6;
+//                 //line-height: 18px;
+//             }
 
-            &::after {
-                content: '<h1/>';
-                font-family: 'La Belle Aurore';
-                font-size: 18px;
-                line-height: 18px;
-                position: absolute;
-                left: -30px;
-                bottom: -20px;
-                margin-left: 20px;
-                opacity: 0.6;
-            }
-        }
+//             &::after {
+//                 content: '<h1/>';
+//                 font-family: 'La Belle Aurore';
+//                 font-size: 2vw;
+//                 //line-height: 18px;
+//                 position: absolute;
+//                 //left: -30px;
+//                 bottom: -2vw;
+//                 //margin-left: 20px;
+//                 opacity: 0.6;
+//             }
+//         }
 
-        p {
-            font-size: 16px;
-            color: #fff;
-            font-family: Georgia;
-            font-weight: 500;
-            min-width: fit-content;
-            animation: pulse 1s;
+//         p {
+//             font-size: 2vw;
+//             color: #fff;
+//             font-family: Georgia;
+//             font-weight: 500;
+//             //min-width: fit-content;
+//             animation: pulse 1s;
 
-            &:nth-of-type(1) {
-                animation-delay: 1.1s;
-            }
+//             &:nth-of-type(1) {
+//                 animation-delay: 1.1s;
+//             }
 
-            &:nth-of-type(2) {
-                animation-delay: 1.2s;
-            }
+//             &:nth-of-type(2) {
+//                 animation-delay: 1.2s;
+//             }
 
-            &:nth-of-type(3) {
-                animation-delay: 1.3s;
-            }
-        }
-    }
+//             &:nth-of-type(3) {
+//                 animation-delay: 1.3s;
+//             }
+//         }
+//     }
 
-    .text-animate-hover{
+//     .text-animate-hover{
+//         &:hover {
+//             color: #fff;
+//         }
+//     }
+
+//     .contact-form {
+//         width: 35%;
+//         margin-top: 20px;
+    
+//         ul {
+//             padding: 0;
+//             margin: 0;
+//             li {
+//                 padding: 0;
+//                 margin: 0;
+//                 list-style: none;
+//                 margin-bottom: 10px;
+//                 overflow: hidden;
+//                 display: block;
+//                 position: relative;
+//                 opacity: 0;
+//                 animation: fadeInUp 2s 2s;
+//                 animation-fill-mode: forwards;
+//                 clear: both;
+//             }
+    
+//             li.half{
+//                 width: 49%;
+//                 margin-left: 2%;
+//                 float: left;
+//                 clear: none;
+    
+//                 &:first-child {
+//                     margin-left: 0;
+//                 }
+//             }
+//         }
+//     }
+
+    
+// ::placeholder{
+//     color: #7F2524;
+// }
+
+// input[type='text'],
+// input[type='email'] {
+//     width:100%;
+//     border-color: #7F2524;
+//     background-color: #f5a6b3;
+//     height: 48px;
+//     font-size: 16px;
+//     color: #fff;
+//     padding: 0 20px;
+//     box-sizing: border-box;
+// }
+
+// textarea{
+//     width: 100%;
+//     border-color: #7F2524;
+//     background-color: #f5a6b3;
+//     height: 48px;
+//     font-size: 16px;
+//     color: #fff;
+//     padding: 20px;
+//     min-height: 150px;
+//     box-sizing: border-box;
+// }
+
+// .send-button{
+//     color: #7F2524;
+//     font-size: 1.25vw;
+//     font-weight: 750;
+//     letter-spacing: 0.07vw;
+//     font-family: sans-serif;
+//     text-decoration: none;
+//     margin: 64px;
+//     border: 0.25vw solid #7F2524;
+//     margin-top: 0vw;
+//     padding-left: 0.75vw;
+//     padding-right: 0.75vw;
+//     padding-top: 0.5vw;
+//     padding-bottom: 0.5vw;
+//     margin-bottom: 2vw;
+//     //display: inline-block;
+//     background-color: transparent; /* Ensure the background is transparent */
+//     white-space: nowrap;
+//     border-radius: 40px;
+//     &:hover{
+//         background: #7F2524;
+//         color: #B7676B;
+//     }
+// }
+// } 
+
+
+
+
+// @media (max-width: 768px) {
+//     .contact-page{
+//         .text-zone{
+//             overflow-y: auto;
+//             overflow-x: hidden;
+//         }
+//         .send-button{
+//             font-size: 3.5vw;
+//             font-weight: 750;
+//             letter-spacing: 0.1vw;
+//             font-family: sans-serif;
+//             text-decoration: none;
+//             margin: 64px;
+//             border: 0.75vw solid #7F2524;
+//             margin-top: 0vw;
+//             padding-left: 1.25vw;
+//             padding-right: 1.25vw;
+//             padding-top: 0.5vw;
+//             padding-bottom: 0.5vw;
+//             margin-bottom: 2vw;
+//             display: inline-block;
+//             background-color: transparent; /* Ensure the background is transparent */
+//             white-space: nowrap;
+//             border-radius: 40px;
+//         }
+//     }
+    
+// }
+
+.contact-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    top: 10vh;
+    height: 100vh; /* Full height of the viewport */
+    overflow-y: auto; /* Ensure content is scrollable if it overflows */
+    padding: 20px; /* Some padding for better appearance */
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+}
+
+.text-zone {
+    position: relative;
+    width: 70%;
+    max-height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    margin: 0 auto; /* Reset margin */
+    margin: left 64px;;
+}
+
+h1 {
+    font-size: 3.5vw;
+    margin-left: 64px;
+    font-family: 'Coolvetica';
+    color: #f5a6b3;
+    font-weight: 400;
+    margin: 0 0 3.75vw 0;
+    position: relative;
+    text-align: left; /* Align h1 to the left */
+    width: 100%; /* Ensure it takes full width of parent */
+}
+
+h1::before,
+h1::after {
+    font-family: 'La Belle Aurore';
+    font-size: 2vw;
+    position: absolute;
+    opacity: 0.6;
+}
+
+h1::before {
+    content: '<h1>';
+    top: -1.5vw;
+    left: -1.25vw;
+}
+
+h1::after {
+    content: '<h1/>';
+    bottom: -2vw;
+    left: -1.25vw;
+}
+
+.text-animate-hover{
         &:hover {
             color: #fff;
         }
     }
-} 
 
-.contact-form {
-    width: 35%;
-    margin-top: 20px;
-
-    ul {
-        padding: 0;
-        margin: 0;
-        li {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            margin-bottom: 10px;
-            overflow: hidden;
-            display: block;
-            position: relative;
-            opacity: 0;
-            animation: fadeInUp 2s 2s;
-            animation-fill-mode: forwards;
-            clear: both;
-        }
-
-        li.half{
-            width: 49%;
-            margin-left: 2%;
-            float: left;
-            clear: none;
-
-            &:first-child {
-                margin-left: 0;
-            }
-        }
-    }
+p {
+    font-size: 2vw;
+    color: #fff;
+    font-family: Georgia;
+    font-weight: 500;
+    animation: pulse 1s;
+    margin: 0; /* Reset margin */
 }
 
-::placeholder{
+p:nth-of-type(1) {
+    animation-delay: 1.1s;
+}
+
+p:nth-of-type(2) {
+    animation-delay: 1.2s;
+}
+
+p:nth-of-type(3) {
+    animation-delay: 1.3s;
+}
+
+.contact-form {
+    width: 100%; /* Ensure it takes full width of parent */
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    margin-bottom: 50px;
+}
+
+.contact-form ul {
+    padding: 0;
+    margin: 0;
+    width: 100%; /* Ensure ul takes full width */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 115px;
+}
+
+.contact-form li {
+    padding: 0;
+    margin: 0 0 10px 0;
+    list-style: none;
+    width: 100%; /* Ensure li takes full width */
+    opacity: 0;
+    animation: fadeInUp 2s 2s;
+    animation-fill-mode: forwards;
+    }
+
+.contact-form li.half {
+    width: 100%;
+    margin: 0; /* Reset margin */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; /* Space out children evenly */
+}
+
+::placeholder {
     color: #7F2524;
 }
 
 input[type='text'],
 input[type='email'] {
-    width:100%;
+    width: 100%;
     border-color: #7F2524;
     background-color: #f5a6b3;
     height: 48px;
@@ -121,11 +336,10 @@ input[type='email'] {
     box-sizing: border-box;
 }
 
-textarea{
+textarea {
     width: 100%;
     border-color: #7F2524;
     background-color: #f5a6b3;
-    height: 48px;
     font-size: 16px;
     color: #fff;
     padding: 20px;
@@ -133,18 +347,53 @@ textarea{
     box-sizing: border-box;
 }
 
-.flat-button{
+.send-button {
     color: #7F2524;
-    background: 0 0;
-    font: Georgia 11px;
-    letter-spacing: 2px;
-    font-weight: bolder;
+    font-size: 1.25vw;
+    font-weight: 750;
+    letter-spacing: 0.07vw;
+    font-family: sans-serif;
     text-decoration: none;
-    padding: 8px 10px;
-    border: 1px solid #7F2524;
-    border-radius: 4px;
-    &:hover{
-        background: #7F2524;
-        color: #B7676B;
+    border: 0.25vw solid #7F2524;
+    padding: 0.5vw 0.75vw;
+    background-color: transparent; /* Ensure the background is transparent */
+    white-space: nowrap;
+    border-radius: 40px;
+    margin-top: 20px;
+    transition: background 0.3s, color 0.3s;
+}
+
+.send-button:hover {
+    background: #7F2524;
+    color: #B7676B;
+}
+
+@media (max-width: 768px) {
+    .text-zone {
+        width: 90%; /* Adjust the width on smaller screens */
+        margin-left: 64px;
+    }
+
+    h1 {
+        font-size: 6vw;
+    }
+
+    p {
+        font-size: 4vw;
+    }
+
+    .send-button {
+        font-size: 3.5vw;
+        border: 0.75vw solid #7F2524;
+        padding: 0.5vw 1.25vw;
+    }
+
+    .contact-form li {
+        flex-direction: column; /* Stack items vertically on smaller screens */
+    }
+
+    .contact-form li.half {
+        width: 100%; /* Ensure full width on smaller screens */
+        margin-bottom: 10px; /* Add some space between stacked items */
     }
 }
