--- a/personal-portfolio/src/components/Contact/index.scss
+++ b/personal-portfolio/src/components/Contact/index.scss
@@ -221,14 +221,15 @@
     align-items: center;
     text-align: left;
     margin: 0 auto; /* Reset margin */
-    margin: left 64px;;
+    margin: left 64px;
+    padding-right:5vw;
 }
 
 h1 {
     font-size: 3.5vw;
     margin-left: 64px;
     font-family: 'Coolvetica';
-    color: #f5a6b3;
+    color: #fff;
     font-weight: 400;
     margin: 0 0 3.75vw 0;
     position: relative;
@@ -258,7 +259,7 @@ h1::after {
 
 .text-animate-hover{
         &:hover {
-            color: #fff;
+            color: #f3aca6;
         }
     }
 
@@ -369,17 +370,41 @@ textarea {
 }
 
 @media (max-width: 768px) {
+    .contact-page{
+        overflow-y: scroll;
+        margin-left: 0;
+        margin-bottom: calc(200px + 10vh);
+    }
     .text-zone {
         width: 90%; /* Adjust the width on smaller screens */
         margin-left: 64px;
+        margin-bottom: 0vh;
+        padding-bottom: 0.25vh;
+
+
+        h1 {
+            text-align: left;
+            font-size: 10vw;
+        }
+        h1::before{
+            font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
+            bottom: 2.0vw;
+        }
+        h1::after {
+            font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
+            bottom: -2.5vw;
+        }
+
+        p{
+            padding-left: 5vh;
+            padding-right: 5vh;
+            font-size: large;
+            padding-bottom: 0vh;
+        }
     }
 
-    h1 {
-        font-size: 6vw;
-    }
-
-    p {
-        font-size: 4vw;
+    .contact-form {
+        margin-top: 0vh;
     }
 
     .send-button {
