--- a/personal-portfolio/src/components/About/index.scss
+++ b/personal-portfolio/src/components/About/index.scss
@@ -83,7 +83,7 @@
     .about-page {
         //max-height: 100%;
         height: 100vh; /* Full viewport height */
-        padding-bottom: 20vh; /* Add padding at the bottom */
+        //padding-bottom: 20vh; /* Add padding at the bottom */
         overflow-y: auto;
         display: flex;
         flex-direction: column;
@@ -108,21 +108,29 @@
             min-width: 50%;
             box-sizing: border-box;
             padding-top: 5%;
-            padding-bottom: 200%;
+            padding-bottom: calc(300px + 100vh);
             max-width: 90%; /* Allow text zone to take full width on smaller screens */
+            h1 {
+                text-align: left;
+                font-size: 10vw;
+            }
+            h1::before{
+                font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
+                bottom: 2.0vw;
+            }
+            h1::after {
+                font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
+                bottom: -2.5vw;
+            }
+    
+            p{
+                padding-left: 5vh;
+                padding-right: 5vh;
+            }
         }
-        h1 {
-            text-align: left;
-        }
+        
 
-        h1::before, h1::after {
-            font-size: 2vw; /* Adjust pseudo-element font-size for smaller screens */
-        }
-
-        p{
-            padding-left: 5vh;
-            padding-right: 5vh;
-        }
+        
 
     }
 
