--- a/personal-portfolio/src/components/Layout/index.scss
+++ b/personal-portfolio/src/components/Layout/index.scss
@@ -62,7 +62,7 @@
         h1 {
             font-size: 4.5vw;
             font-family: 'Coolvetica';
-            color: #f5a6b3;
+            color: #fff;
             font-weight: 400;
             margin-left: 64px;
             margin-top: 0;
@@ -131,7 +131,7 @@
             }
             margin-top: 5vh;
             display: flex;
-            justify-content: space-around;
+            justify-content: space-evenly;
             align-items: center;
         }
     }
@@ -140,7 +140,7 @@
 
     .text-animate-hover{
         &:hover {
-            color: #fff;
+            color: #f3aca6;
         }
     }
 
