--- a/personal-portfolio/src/components/Projects/LSLS/index.scss
+++ b/personal-portfolio/src/components/Projects/LSLS/index.scss
@@ -1,16 +1,18 @@
-.projects-page{
+.lsls-page{
     display: flex;
     margin-left: 64px;
     margin-top: 50px;
-    top: 10vh;
     margin-bottom: 50px;
-    bottom: 10vh;
+    top: 5vh;
+    bottom: 5vh;
     padding: 2vw;
     text-align: left;
     max-width: 100%;
     height: 90vh;
     box-sizing: border-box;
     overflow-y: scroll;
+    overflow-x: hidden;
+
     .text-zone{
         margin-left: 64px;
         position: relative;
@@ -59,18 +61,24 @@
             }
         }
 
-        p {
-            text-align: center;
-            font-size: 2vw;
+        h4 {
+            text-align: left;
+            font-size: 1.25vw;
+            margin-right: 15px;
             color: #fff;
             font-family: Georgia;
             font-weight: 500;
             min-width: fit-content;
             animation: pulse 1s;
 
+
             &:nth-of-type(1) {
                 animation-delay: 1.1s;
             }
+        }
+        img{
+            width: 60vw;
+            height: auto;
         }
     }
 
@@ -80,53 +88,24 @@
         }
     }
 
-    .images{
-        display: flex;
-        flex-direction: row;
-        //align-items: center;
-        justify-content: space-evenly;
-
-        .project{
-            //margin-left: 40%;
-            flex-direction: column;
-            text-align: center;
-            animation: pulse 1s;
-            animation-delay: 1.4s;
-        }
-        
-        img{
-            border: 5px solid #f5a6b3;
-            width: 250px;
-            height: 250px;
-        }
-
-        h3{
-            font-family: Georgia;
-            text-align: center;
-            font-size: 2vw;
-            color: white;
-        }
-    }
 }
 
-@media (max-width: 768px) {
-    .projects-page{
+@media (max-width: 800px) {
+    .lsls-page{
         flex-direction: column;
-        justify-content: center;
         margin-bottom: 100px;
         overflow-y: scroll;
         overflow-x: hidden;
+        max-width: 80%;
         height: calc(90vh - 200px); /* Adjust height to end 100px before the bottom */
-
+        //align-items: center;
         padding-bottom: 100px;
+        
         .text-zone{
-            margin-right: 0px;
-            justify-content: center;
-            align-items: center;
-            max-width: 80%;
             h1 {
                 text-align: left;
                 font-size: 10vw;
+                word-wrap: break-word;
             }
             h1::before{
                 font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
@@ -136,21 +115,19 @@
                 font-size: 3.5vw; /* Adjust pseudo-element font-size for smaller screens */
                 bottom: -2.5vw;
             }
-    
-            p{
-                padding-left: 5vh;
-                padding-right: 5vh;
-            }
-        }
-        .images{
-            flex-direction: column;
-            margin-bottom: 100px;
-            h3{
+            h4{
                 font-size: 4vw;
             }
+            flex-direction: column;
             margin-bottom: 100px;
-        }
+            align-items: center;
+
         
+
+            
+        }
+
     }
+    
     
 }
